# window

./: .gitignore  README.md
dadi/: README.md  README.md~  config_100runs.yaml  dadi.snakefile
dadi/collect/: get_results.py
window-input/: README.md  run.fish  snakefile
window-input/configs/: 1000g.yaml  impala.yaml
window-input/scripts/: gather_depth.R  tidy_depth.R
window-paper/: .gitignore  Makefile  README.md  bibliography.bib  imports.sty  macros.tex  main.tex  main_supplementary.tex  supplementary.tex
window-paper/data/: CEU-YRI.block_loglik.csv  CEU-YRI.loglik.csv  CEU-YRI.stat.csv  MasaiMara.bench.csv  MasaiMara.block_loglik.csv  MasaiMara.loglik.csv  MasaiMara.sfs.csv  MasaiMara.stat.csv  Shangani-MasaiMara.bench.csv  Shangani-MasaiMara.block_loglik.csv  Shangani-MasaiMara.loglik.csv  Shangani-MasaiMara.stat.csv  YRI.block_loglik.csv  YRI.loglik.csv  YRI.sfs.csv  YRI.stat.csv  dadi_first_parameters.csv  dadi_residuals.csv  dadi_second_parameters.csv  dadi_third_parameters.csv  data.csv  depth.csv  sim.block_loglik.csv  sim.loglik.csv  sim.stat.csv
window-paper/scripts/: 1d.R  2d.R  bench_impala.R  bench_masaimara.R  dadi.R  f2.R  human_depth.R  impala_depth.R  masaimara_loglik.R  peak.R  sim.R  stop.R  stream.R  tables.R  yri_loglik.R
window-paper/sections/: abstract.tex  discussion.tex  (+3 more)
window-results/: README.md  helpers.smk  run.fish  snakefile
window-simulate/: README.md  config.yaml  snakefile
window-simulate/rust/simgl/: Cargo.toml
window-simulate/rust/simgl/src/: cli.rs  main.rs  reader.rs  record.rs  runner.rs  simulate.rs
(+44 files in other folders)
